--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^5.17.0",
