--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^1.7.16",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
